--- a/vuemullet/package.json
+++ b/vuemullet/package.json
@@ -21,11 +21,15 @@
     "roboto-fontface": "*",
     "style-loader": "^0.18.2",
     "vue": "^2.6.11",
+    "vue-quick-menu": "^1.0.7",
+    "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
